[package]
authors = ["Akihiro Yamamoto <ak1211@mail.ak1211.com>"]
categories = ["embedded", "no-std"]
description = "hello, world"
documentation = "https://github.com/ak1211/hello-nucleo-so2002/README.md"
keywords = ["arm", "cortex-m", "so2002"]
license = "Apache-2.0"
name = "hello-nucleo-so2002"
repository = "https://github.com/ak1211/hello-nucleo-so2002"
version = "0.1.0"
[dependencies]
embedded-hal = "0.2.2"
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"

[dependencies.stm32f30x-hal]
features = ["rt"]
version = "0.2.0"

[profile]
[profile.dev]

[profile.release]
codegen-units = 1
debug = true
lto = true
